# sylib

./: CMakeLists.txt
include/sylib/: io.h  math.h  wave.h
src/: io.cpp  math.cpp  wave.cpp
